@@ -3,6 +3,8 @@ Version: 0.2.13
 Date: 28.03.2024
   Features:
     - Now shows "Distance jetpacked" in victory screen. (Was previously counted as "walking")
+  Bugfixes:
+    - Correctly handle rare case where mod disabling victory condition is removed (Thanks Nordblum!).
   Localization:
     - Update translations from Crowdin.
 ---------------------------------------------------------------------------------------------------
